Still trying to fix webpage not showing correctly

--- a/Script/style.css
+++ b/Script/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: hsl(189, 11%, 24%);
+  background-color: hsl(189, 13%, 22%);
   background-image: url(../Images/100308.jpg);
   background-size: cover;
   background-blend-mode: luminosity;
@@ -28,7 +28,6 @@ body {
 
 header {
   text-align: center;
-  N ;
   padding: 20px;
   padding-top: 0px;
   color: hsl(185, 23%, 79%);
